@@ -1,0 +1,64 @@
+begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
+begin_comment
+comment|/**  * Copyright 2007 The Apache Software Foundation  *  * Licensed under the Apache License, Version 2.0 (the "License");  * you may not use this file except in compliance with the License.  * You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+end_comment
+
+begin_package
+package|package
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+package|;
+end_package
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_comment
+comment|/**  * Thrown during flush if the possibility snapshot content was not properly  * persisted into store files.  Response should include replay of hlog content.  */
+end_comment
+
+begin_class
+specifier|public
+class|class
+name|DroppedSnapshotException
+extends|extends
+name|IOException
+block|{
+specifier|public
+name|DroppedSnapshotException
+parameter_list|(
+name|String
+name|msg
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|msg
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|DroppedSnapshotException
+parameter_list|()
+block|{
+name|super
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+end_class
+
+end_unit
+
